// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/Clinical-Review Integration Tests (GET) /clinical-review with returned data 1`] = `
{
  "data": [
    {
      "Clinical_review_message": {
        "correlation_id": "5c6befb5-ae41-4778-8a93-f7e7aecbe19e",
        "execution_id": "3473a842-8241-41f9-af0a-8b2d753a8a1a",
        "files": [
          {
            "bucket": "string",
            "endpoint": "string - the MinIO address",
            "name": "string",
            "relative_root_path": "string -path in bucket",
          },
        ],
        "patient_metadata": {
          "patient_dob": "19/09/1996",
          "patient_gender": "M",
          "patient_id": "1",
          "patient_name": "steve jobs",
        },
        "reviewed_execution_id": "730d1ec1-9e23-4794-9185-e9fe4e09dca7",
        "reviewed_task_id": "reviewed_task_id",
        "task_id": "taskid",
        "workflow_name": "workflow_name",
      },
      "reviewed": false,
    },
    {
      "Clinical_review_message": {
        "correlation_id": "5c6befb5-ae41-4778-8a93-f7e7aecbe19ef",
        "execution_id": "3473a842-8241-41f9-af0a-8b2d753a8a1af",
        "files": [
          {
            "bucket": "string",
            "endpoint": "string - the MinIO address",
            "name": "string",
            "relative_root_path": "string -path in bucket",
          },
        ],
        "patient_metadata": {
          "patient_dob": "19/09/1996",
          "patient_gender": "M",
          "patient_id": "2",
          "patient_name": "steve madden",
        },
        "reviewed_execution_id": "730d1ec1-9e23-4794-9185-e9fe4e09dca7f",
        "reviewed_task_id": "reviewed_task_id2",
        "task_id": "taskid2",
        "workflow_name": "workflow_name2",
      },
      "reviewed": false,
    },
  ],
  "firstPage": "/page-1",
  "lastPage": "/page-1",
  "nextPage": null,
  "pageNumber": 1,
  "pageSize": 10,
  "previousPage": null,
  "totalPages": 1,
  "totalRecords": 2,
}
`;

exports[`/Clinical-Review Integration Tests (GET) /clinical-review with returned data 2`] = `
{
  "data": [
    {
      "Clinical_review_message": {
        "correlation_id": "5c6befb5-ae41-4778-8a93-f7e7aecbe19e",
        "execution_id": "3473a842-8241-41f9-af0a-8b2d753a8a1a",
        "files": [
          {
            "bucket": "string",
            "endpoint": "string - the MinIO address",
            "name": "string",
            "relative_root_path": "string -path in bucket",
          },
        ],
        "patient_metadata": {
          "patient_dob": "19/09/1996",
          "patient_gender": "M",
          "patient_id": "1",
          "patient_name": "steve jobs",
        },
        "reviewed_execution_id": "730d1ec1-9e23-4794-9185-e9fe4e09dca7",
        "reviewed_task_id": "reviewed_task_id",
        "task_id": "taskid",
        "workflow_name": "workflow_name",
      },
      "reviewed": false,
    },
  ],
  "firstPage": "/page-1",
  "lastPage": "/page-1",
  "nextPage": null,
  "pageNumber": 1,
  "pageSize": 10,
  "previousPage": null,
  "totalPages": 1,
  "totalRecords": 1,
}
`;

exports[`/Clinical-Review Integration Tests (GET) /clinical-review without returned data 1`] = `
{
  "data": [],
  "firstPage": "/page-1",
  "lastPage": "/page-1",
  "nextPage": null,
  "pageNumber": 1,
  "pageSize": 10,
  "previousPage": null,
  "totalPages": 1,
  "totalRecords": 0,
}
`;

exports[`/Clinical-Review Integration Tests (PUT) /clinical-review 400 when body invalid 1`] = `
{
  "detail": "SUBJECT TO CHANGE - Invalid Clinical Review Body",
  "instance": "/clinical-review/41c5778c-9957-4cfd-be7a-c0bbff5c7cca",
  "status": 400,
  "title": "Bad Request",
  "traceId": "00-1a488bac0cc6ae854a5b6ab0c237dd8f-5ab3204912c13ca3-00",
  "type": "https://tools.ietf.org/html/rfc7231#section-6.5.4",
}
`;

exports[`/Clinical-Review Integration Tests (PUT) /clinical-review 400 when id invalid 1`] = `
{
  "detail": "SUBJECT TO CHANGE - Invalid Clinical Review Id",
  "instance": "/clinical-review/41c5778c-9957-4cfd-be7a-c0bbff5c7cca",
  "status": 400,
  "title": "Bad Request",
  "traceId": "00-1a488bac0cc6ae854a5b6ab0c237dd8f-5ab3204912c13ca3-00",
  "type": "https://tools.ietf.org/html/rfc7231#section-6.5.4",
}
`;

exports[`/Clinical-Review Integration Tests (PUT) /clinical-review 404 when review not found 1`] = `
{
  "detail": "SUBJECT TO CHANGE - Failed to find clinical review",
  "instance": "/clinical-review/41c5778c-9957-4cfd-be7a-c0bbff5c7cca",
  "status": 404,
  "title": "Not Found",
  "traceId": "00-1a488bac0cc6ae854a5b6ab0c237dd8f-5ab3204912c13ca3-00",
  "type": "https://tools.ietf.org/html/rfc7231#section-6.5.4",
}
`;
